basic styles added to temporary html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="./assest/style.css"
-    <title>Team Members Profile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assest/style.css">
+    <title>Team Members Profile Generator</title>
 </head>
+
 <body>
+    <h1>My Team</h1>
+    <hr id="h1-break">
+    <div id='card-container'>
+        <div class="card" style="width: 18rem;">
+            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Employee Name</h4>
+                <h5 class="card-text">Job Role</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID#</li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item">Phone/Git/School</li>
+            </ul>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Employee Name</h4>
+                <h5 class="card-text">Job Role</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID#</li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item">Phone/Git/School</li>
+            </ul>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Employee Name</h4>
+                <h5 class="card-text">Job Role</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID#</li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item">Phone/Git/School</li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
