all image sizes are fitting inside box

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+            <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Employee Name</h4>
                 <h5 class="card-text">Job Role</h5>
@@ -39,7 +39,7 @@
             </ul>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+            <img src="./images/studentIcon.png" class="card-img-top icon" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Employee Name</h4>
                 <h5 class="card-text">Job Role</h5>
