html preveiw file complete

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 <body>
     <h1>My Team</h1>
-    <hr id="h1-break">
     <div id='card-container'>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Employee Name</h4>
@@ -22,11 +21,13 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID#</li>
-                <li class="list-group-item">Email</li>
-                <li class="list-group-item">Phone/Git/School</li>
+                <!-- place holder for email -->
+                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
+                <!-- place holder for phone number -->
+                <li class="list-group-item"><a href= “tel:+YOURNUMBERHERE” class = 'links'>Office Number</a></li>
             </ul>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Employee Name</h4>
@@ -34,11 +35,13 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID#</li>
-                <li class="list-group-item">Email</li>
-                <li class="list-group-item">Phone/Git/School</li>
+                <!-- place holder for email -->
+                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
+                <!-- place holder for git -->
+                <li class="list-group-item"><a href='url' target='_blank' rel = 'noopener' class = 'links'>GitHub username</a></li>
             </ul>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="./images/studentIcon.png" class="card-img-top icon" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Employee Name</h4>
@@ -46,8 +49,9 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID#</li>
-                <li class="list-group-item">Email</li>
-                <li class="list-group-item">Phone/Git/School</li>
+                <!-- place holder for email -->
+                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
+                <li class="list-group-item">School</li>
             </ul>
         </div>
     </div>
