--- a/indexpreveiw.html
+++ b/indexpreveiw.html
@@ -12,49 +12,51 @@
 
 <body>
     <h1>My Team</h1>
-    <div id='card-container'>
-        <div class="card">
-            <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Employee Name</h4>
-                <h5 class="card-text">Job Role</h5>
+    <main>
+        <div id='card-container'>
+            <div class="card">
+                <img src="./images/managerMale.png" class="card-img-top icon" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Employee Name</h4>
+                    <h5 class="card-text">Manager</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">ID#</li>
+                    <!-- place holder for email -->
+                    <li class="list-group-item"><a href = "mailto: jaqwaeellison@yahoo.com" class ='links'>Email</a></li>
+                    <!-- place holder for phone number -->
+                    <li class="list-group-item">123456</li>
+                </ul>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID#</li>
-                <!-- place holder for email -->
-                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
-                <!-- place holder for phone number -->
-                <li class="list-group-item"><a href= “tel:+YOURNUMBERHERE” class = 'links'>Office Number</a></li>
-            </ul>
-        </div>
-        <div class="card">
-            <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Employee Name</h4>
-                <h5 class="card-text">Job Role</h5>
+            <div class="card">
+                <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Employee Name</h4>
+                    <h5 class="card-text">Job Role</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">ID#</li>
+                    <!-- place holder for email -->
+                    <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
+                    <!-- place holder for git -->
+                    <li class="list-group-item"><a href='https://github.com/JaQwae' target='_blank' rel = 'noopener' class = 'links'>GitHub </a></li>
+                </ul>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID#</li>
-                <!-- place holder for email -->
-                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
-                <!-- place holder for git -->
-                <li class="list-group-item"><a href='url' target='_blank' rel = 'noopener' class = 'links'>GitHub username</a></li>
-            </ul>
-        </div>
-        <div class="card">
-            <img src="./images/studentIcon.png" class="card-img-top icon" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Employee Name</h4>
-                <h5 class="card-text">Job Role</h5>
+            <div class="card">
+                <img src="./images/studentIcon.png" class="card-img-top icon" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Employee Name</h4>
+                    <h5 class="card-text">Job Role</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">ID#</li>
+                    <!-- place holder for email -->
+                    <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
+                    <li class="list-group-item">School</li>
+                </ul>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID#</li>
-                <!-- place holder for email -->
-                <li class="list-group-item"><a href = "mailto: abc@example.com" class ='links'>Email</a></li>
-                <li class="list-group-item">School</li>
-            </ul>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
