--- a/index.HTML
+++ b/index.HTML
@@ -15,7 +15,46 @@
     <h1>My Team</h1>
     <main>
         <div id='card-container'>
-            undefined
+            
+            <div class="card">
+                <img src="./images/managerMale.png" class="card-img-top icon" alt="a cartoon representation icon of a manager ">
+                <div class="card-body">
+                    <h4 class="card-title">J</h4>
+                    <h5 class="card-text">Manager</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">123</li>
+                    <li class="list-group-item"><a href = "mailto: G" class ='links'>Email</a></li>
+                    <li class="list-group-item">321</li>
+                </ul>
+            </div>
+        ,
+                <div class="card">
+                    <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="a cartoon picture of a computer depicting gears on the screen">
+                    <div class="card-body">
+                        <h4 class="card-title">L</h4>
+                        <h5 class="card-text">Engineer</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">987</li>
+                        <li class="list-group-item"><a href = "mailto: h" class ='links'>Email</a></li>
+                        <li class="list-group-item"><a href='https://github.com/undefined' target='_blank' rel = 'noopener' class = 'links'>GitHub </a></li>
+                    </ul>
+                </div>
+            ,
+                <div class="card">
+                    <img src="./images/studentIcon.png" class="card-img-top icon" alt="a cartoon representation of a student using a laptop">
+                    <div class="card-body">
+                        <h4 class="card-title">K</h4>
+                        <h5 class="card-text">Intern</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">951</li>
+                        <li class="list-group-item"><a href = "mailto: l" class ='links'>Email</a></li>
+                        <li class="list-group-item">159</li>
+                    </ul>
+                </div>
+            
         </div>
     </main>
 </body>
