made HTML lowercase for the file

--- a/index.HTML
+++ b/index.HTML
@@ -23,38 +23,12 @@
                     <h5 class="card-text">Manager</h5>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">123</li>
-                    <li class="list-group-item"><a href = "mailto: G" class ='links'>Email</a></li>
-                    <li class="list-group-item">321</li>
+                    <li class="list-group-item">A</li>
+                    <li class="list-group-item"><a href = "mailto: Q" class ='links'>Email</a></li>
+                    <li class="list-group-item">W</li>
                 </ul>
             </div>
-        ,
-                <div class="card">
-                    <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="a cartoon picture of a computer depicting gears on the screen">
-                    <div class="card-body">
-                        <h4 class="card-title">L</h4>
-                        <h5 class="card-text">Engineer</h5>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">987</li>
-                        <li class="list-group-item"><a href = "mailto: h" class ='links'>Email</a></li>
-                        <li class="list-group-item"><a href='https://github.com/undefined' target='_blank' rel = 'noopener' class = 'links'>GitHub </a></li>
-                    </ul>
-                </div>
-            ,
-                <div class="card">
-                    <img src="./images/studentIcon.png" class="card-img-top icon" alt="a cartoon representation of a student using a laptop">
-                    <div class="card-body">
-                        <h4 class="card-title">K</h4>
-                        <h5 class="card-text">Intern</h5>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">951</li>
-                        <li class="list-group-item"><a href = "mailto: l" class ='links'>Email</a></li>
-                        <li class="list-group-item">159</li>
-                    </ul>
-                </div>
-            
+        
         </div>
     </main>
 </body>
