for loop in generatehtml switched to for of loop

--- a/index.HTML
+++ b/index.HTML
@@ -1,5 +1,5 @@
 
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,13 +19,13 @@
             <div class="card">
                 <img src="./images/managerMale.png" class="card-img-top icon" alt="a cartoon representation icon of a manager ">
                 <div class="card-body">
-                    <h4 class="card-title">J</h4>
+                    <h4 class="card-title">dfadf</h4>
                     <h5 class="card-text">Manager</h5>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">A</li>
-                    <li class="list-group-item"><a href = "mailto: Q" class ='links'>Email</a></li>
-                    <li class="list-group-item">W</li>
+                    <li class="list-group-item">dgaga</li>
+                    <li class="list-group-item"><a href = "mailto: ggagadfg" class ='links'>Email</a></li>
+                    <li class="list-group-item">asdfafa</li>
                 </ul>
             </div>
         
