--- a/index.HTML
+++ b/index.HTML
@@ -19,13 +19,13 @@
             <div class="card">
                 <img src="./images/managerMale.png" class="card-img-top icon" alt="a cartoon representation icon of a manager ">
                 <div class="card-body">
-                    <h4 class="card-title">dfadf</h4>
+                    <h4 class="card-title">dfadfa</h4>
                     <h5 class="card-text">Manager</h5>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">dgaga</li>
-                    <li class="list-group-item"><a href = "mailto: ggagadfg" class ='links'>Email</a></li>
-                    <li class="list-group-item">asdfafa</li>
+                    <li class="list-group-item">dgadgafdg</li>
+                    <li class="list-group-item"><a href = "mailto: dfadaggadgafd" class ='links'>Email</a></li>
+                    <li class="list-group-item">ghdfghdfgh</li>
                 </ul>
             </div>
         
