email and git hub name is showing up not just placeholders

--- a/index.HTML
+++ b/index.HTML
@@ -19,16 +19,42 @@
             <div class="card">
                 <img src="./images/managerMale.png" class="card-img-top icon" alt="a cartoon representation icon of a manager ">
                 <div class="card-body">
-                    <h4 class="card-title">dfadfa</h4>
+                    <h4 class="card-title">0</h4>
                     <h5 class="card-text">Manager</h5>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">dgadgafdg</li>
-                    <li class="list-group-item"><a href = "mailto: dfadaggadgafd" class ='links'>Email</a></li>
-                    <li class="list-group-item">ghdfghdfgh</li>
+                    <li class="list-group-item">1</li>
+                    <li class="list-group-item"><a href = "mailto: 2" class ='links'>2</a></li>
+                    <li class="list-group-item">3</li>
                 </ul>
             </div>
-        
+        ,
+                <div class="card">
+                    <img src="./images/softwareDeveloperIcon(3).png" class="card-img-top icon" alt="a cartoon picture of a computer depicting gears on the screen">
+                    <div class="card-body">
+                        <h4 class="card-title">4</h4>
+                        <h5 class="card-text">Engineer</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">5</li>
+                        <li class="list-group-item"><a href = "mailto: 6" class ='links'>6</a></li>
+                        <li class="list-group-item"><a href='https://github.com/undefined' target='_blank' rel = 'noopener' class = 'links'>undefined</a></li>
+                    </ul>
+                </div>
+            ,
+                <div class="card">
+                    <img src="./images/studentIcon.png" class="card-img-top icon" alt="a cartoon representation of a student using a laptop">
+                    <div class="card-body">
+                        <h4 class="card-title">8</h4>
+                        <h5 class="card-text">Intern</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">9</li>
+                        <li class="list-group-item"><a href = "mailto: 10" class ='links'>10</a></li>
+                        <li class="list-group-item">11</li>
+                    </ul>
+                </div>
+            
         </div>
     </main>
 </body>
